<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppRTC</string>
    <string name="menu_settings">Settings</string>
    <string name="ip">IP :</string>
    <string name="port">Port :</string>
    <string name="name">Name :</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="mediaSettings">mediaSettings</string>
    <string name="ipSettings">ipSettings</string>
    <string name="status">status</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="password">PWD</string>
    <string name="desname">Des Name</string>
</resources>
